kubernetes/rails-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rails
  name: rails
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: ttl.sh/seemiller/rails-blog:1d
        ports:
        - containerPort: 3000
