kubernetes/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: blog
  labels:
    app: blog
spec:
  selector:
    app: blog
  clusterIP: None
  ports:
    - name: "3306"
      port: 3306
      protocol: TCP
      targetPort: 3306
