kubernetes/rails-knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: rails-blog
  namespace: blog
spec:
  template:
    metadata:
      name: rails-blog-0001
    spec:
      containers:
        - name: rails
          image: seemiller/rails-blog
          ports:
          - containerPort: 3000
          env:
          - name: DATABASE_URL
            valueFrom:
              secretKeyRef:
                name: rails-secrets
                key: database-url
          - name: SECRET_KEY_BASE
            valueFrom:
              secretKeyRef:
                name: rails-secrets
                key: secret-key-base
