kubernetes/rails-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rails
  name: rails
  namespace: blog
spec:
  clusterIP: None
  ports:
    - name: 80-3000
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: rails
  type: ClusterIP
